--- a/public/projetos/pietra/index.html
+++ b/public/projetos/pietra/index.html
@@ -9,9 +9,10 @@
     <link href="estilo.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
-        <h1>PIETRA EMANUELLY</h1>
-        <h2>Brasileira, Aquariana, 7 anos</h2>
+    <head>
+        <h1>MINI BLOG KIDS</h1>
+        <h2>PIETRA EMANUELLY</h2>
+        <h3>Brasileira, Aquariana, 6 anos</h3>
         <p>Criança feliz, ama curtir a mamãe e a família!</p>
         <p>Adora brincar com as primas e os amiguinhos.</p>
         <p>Parece que seu celular está grudado em suas mãos.</p>
@@ -26,22 +27,23 @@
         <p>Também adora recordar os bons tempos de <b>Flor da Montanha</b>, foi lá que conheceu o Lucas, antes mesmo de completar 3 anos, uma amizade linda que uniu ambas famílias.</p>
         <h3>Despertou seu desejo em modelar ainda muito pequena</h3>
         <p>Aos 3 anos, gostava de fotos e desfilava pela casa, as vezes usava calçados da mamãe.</p>
-        <div id="div_direita">Pessoal</div>
-        <div id="div_esquerda">Profissional</div>
+    </head>
+    <section >
+    <div class="imagem">
         <img src="PI.jpg" width="50%" />
         <img src="PIE.jpg" width="50%" />
-    
+    </div>    
         <div>
             <em>Meus contatos e redes sociais:</em>
             <p><b>Email:</b><a href="mailto:pietraemanuellycosta@gmail.com" title="Enviar Email"> pietraemanuellycosta@gmail.com</a></p>
             <p><b>Facebook: </b><a href="https://m.facebook.com/profile.php?id=100036581596509" target="_blank">Pietra Emanuelly</a></p>
             <p><b>Instagran: </b><a href="https://instagram.com/pietraemanuellynunes?igshid=s3zaztgdqq9x" target="_blank">@pietraemanuellycosta</a></p>
 
-            <div>Espero que tenham gostado!</div>
+            <div>Espero que tenham gostado! Essa é minha primeira página em HTML5 e CSS3 independente que quis homenagear minha pequena princesa Pietra! Que eu amo mais que tudo na vida!</div>
             <footer>
                 <p>Desenvolvido por Jucilene Nunes - &copy; 2020</p>
             </footer>
         </div>
-    </div>
+    </section>
 </body>
 </html>
